# dgc

./: Cargo.toml
dgc/: Cargo.toml
dgc-italy-core/: Cargo.toml
dgc-italy-core/src/: lib.rs  settings.rs
dgc-italy-core/tests/: lib.rs
dgc-italy-core/tests/data/: settings.json
dgc/src/: dgc.rs  lib.rs  recovery.rs  test.rs  vaccination.rs
examples/: validate-signature.rs
src/: cwt.rs  parse.rs
tests/: lib.rs
