[package]
name = "dgc-italy-core"
version = "0.0.0"
edition = "2021"
keywords = ["dgc", "greenpass", "certificate", "cose", "health", "italy"]
categories = ["encoding", "data-structures", "cryptography"]
repository = "https://github.com/rust-italia/dgc"
readme = "README.md"
license = "MIT"

[dependencies]
chrono = "0.4.19"
dgc = { path = "../dgc" }
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.78"
